--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,7 @@ h6 {
     font-family: 'Poppins', sans-serif;
     font-weight: var(--bold);
     color: rgb(var(--very-dark-cyan));
-    line-height: 1.5em;
+    line-height: 1.5;
 }
 
 h1 {
@@ -59,7 +59,7 @@ h3 {
 
 p {
     font-size: 1.6rem;
-    line-height: 1.5em;
+    line-height: 1.5;
 }
 
 input {
@@ -137,6 +137,8 @@ body {
     padding: 1.35em 0 1.3em;
     width: 100%;
     max-width: 20em;
+    display: block;
+    margin: auto;
     color: var(--white);
     font-size: 2rem;
     font-weight: var(--bold);
@@ -369,7 +371,7 @@ main {
 .footer__newsletter-description {
     font-size: 1.4rem;
     font-weight: var(--semi-bold);
-    line-height: calc(24em / 14);
+    line-height: calc(24 / 14);
 }
 
 .footer__location {
